Splash Screen añadido al iniciar la app

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,5 +5,9 @@
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
+    <style name="SplashTheme" parent="Base.Theme.GymVenomApp">
+       <item name="android:windowBackground">@drawable/splashscreencolor</item>
+    </style>
+
     <style name="Theme.GymVenomApp" parent="Base.Theme.GymVenomApp" />
 </resources>
