--- a/app/src/main/res/layout/activity_pantalla1.xml
+++ b/app/src/main/res/layout/activity_pantalla1.xml
@@ -21,11 +21,12 @@
     <ProgressBar
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyle"
-        android:layout_width="95dp"
-        android:layout_height="95dp"
-        android:layout_marginTop="84dp"
+        android:layout_width="40dp"
+        android:layout_height="37dp"
+        android:layout_marginTop="204dp"
         android:rotation="360"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView3"
         tools:ignore="MissingConstraints" />
