--- a/app/src/main/res/layout/activity_pantalla2.xml
+++ b/app/src/main/res/layout/activity_pantalla2.xml
@@ -7,7 +7,9 @@
     android:layout_height="match_parent"
     android:background="@color/cardview_dark_background"
     tools:context=".pantalla2"
-    tools:ignore="MissingConstraints">
+    tools:ignore="MissingConstraints"
+    tools:layout_editor_absoluteX="0dp"
+    tools:layout_editor_absoluteY="-8dp">
 
 
     <ImageView
@@ -43,8 +45,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.457"
-        tools:layout_editor_absoluteX="68dp"
-        tools:ignore="MissingConstraints" />
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="68dp" />
 
     <TextView
         android:id="@+id/textView3"
@@ -53,9 +55,9 @@
         android:text="Contraseña"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         android:textColor="#F4F0F0"
+        tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="68dp"
-        tools:layout_editor_absoluteY="455dp"
-        tools:ignore="MissingConstraints" />
+        tools:layout_editor_absoluteY="455dp" />
 
     <EditText
         android:id="@+id/editTextTextPassword"
@@ -68,9 +70,9 @@
         android:textColorHighlight="#EBE9E9"
         android:textColorHint="#F2EEEE"
         android:visibility="visible"
+        tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="68dp"
-        tools:layout_editor_absoluteY="474dp"
-        tools:ignore="MissingConstraints" />
+        tools:layout_editor_absoluteY="474dp" />
 
     <EditText
         android:id="@+id/editTextText2"
@@ -83,8 +85,8 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         android:textColor="#F2F1F1"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="387dp"
-        tools:ignore="MissingConstraints" />
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteY="417dp" />
 
     <Button
         android:id="@+id/button"
@@ -97,8 +99,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="549dp"
-        tools:ignore="MissingConstraints" />
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteY="549dp" />
 
     <Button
         android:id="@+id/button3"
@@ -110,8 +112,8 @@
         android:textColor="#FDF9F9"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="719dp"
-        tools:ignore="MissingConstraints" />
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteY="719dp" />
 
     <Button
         android:id="@+id/button4"
@@ -123,8 +125,8 @@
         android:textColor="#FDF9F9"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="650dp"
-        tools:ignore="MissingConstraints" />
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteY="650dp" />
 
     <ImageView
         android:id="@+id/imageView4"
